backend/src/main/java/com/example/backend/error/user/NoUserWithSuchUsernameExistsException.java
package com.example.backend.error.user;

public class NoUserWithSuchUsernameExistsException extends RuntimeException {

    public NoUserWithSuchUsernameExistsException(String message) {
        super(message);
    }

}
